Initial tag commit

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -39,6 +39,7 @@ shadowJar {
 
 dependencies {
     implementation project(':database')
+    implementation project(':tag-system')
 
     implementation 'net.dv8tion:JDA:4.3.0_324'
 
