--- a/application/build.gradle
+++ b/application/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
 
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testRuntimeOnly 'org.mockito:mockito-core:3.12.4'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
