Extract database codegen
The codegen should be local to each module and not centrally defined in
a single place as modules might want to have their own database.

This commit extracts the shared database logic into a buildscript and
then uses it in the application/LogViewer modules

--- a/application/build.gradle
+++ b/application/build.gradle
@@ -8,6 +8,7 @@ plugins {
     id 'application'
     id 'com.google.cloud.tools.jib' version '3.1.4'
     id 'com.github.johnrengelman.shadow' version '7.0.0'
+    id 'database-settings'
 }
 
 repositories {
