--- a/logviewer/build.gradle
+++ b/logviewer/build.gradle
@@ -1,11 +1,10 @@
-import java.time.Instant
-
 plugins {
     id "com.google.cloud.tools.jib" version "3.1.4"
     id "org.springframework.boot" version "2.5.5"
     id "io.spring.dependency-management" version "1.0.11.RELEASE"
     id "com.vaadin" version "21.0.2"
     id 'java'
+    id 'database-settings'
 }
 
 defaultTasks("clean", "bootRun")
@@ -20,6 +19,20 @@ repositories {
 configurations {
     developmentOnly
     runtimeClasspath.extendsFrom(developmentOnly)
+}
+
+jooq {
+    configurations {
+        main {
+            generationTool {
+                generator {
+                    target {
+                        packageName = 'org.togetherjava.tjbot.db.generated'
+                    }
+                }
+            }
+        }
+    }
 }
 
 dependencies {
